--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 plugins {
-  id 'org.springframework.boot' version '2.6.6'
+  id 'org.springframework.boot' version '2.6.7'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
+  id 'com.google.cloud.tools.jib' version '1.8.0'
 }
 
 apply plugin: 'java'
@@ -38,4 +39,14 @@ dependencies {
 
 test {
   useJUnitPlatform()
+}
+
+jib {
+    from {
+        image = 'adoptopenjdk:11.0.5_10-jre-hotspot-bionic'
+    }
+
+    to {
+        image = "maniekq/${project.name}:${project.version}"
+    }
 }
