--- a/.github/workflows/JFrog-CLI-Example.yml
+++ b/.github/workflows/JFrog-CLI-Example.yml
@@ -19,4 +19,4 @@ jobs:
           # Collect VCS details from git and add them to the build
           jf rt bag
           # Publish build info
-          jf rt bp
+          jf rt bp --project guy-test
