--- a/.github/workflows/JFrog-CLI-Example.yml
+++ b/.github/workflows/JFrog-CLI-Example.yml
@@ -24,10 +24,10 @@ jobs:
       - name: Build
         run: |
           jf gradle clean build -x test
-      - name: Publish
+      - name: Publish artifact
         run: |
           jf rt u build/libs/spring-petclinic-2.6.0-plain.jar guy-gradle-virtual
-      - name: Run JFrog CLI
+      - name: Publish build info
         run: |
           # Collect environment variables for the build
           jf rt bce
@@ -35,3 +35,6 @@ jobs:
           jf rt bag
           # Publish build info
           jf rt bp
+      - name: Scan with Xray
+        run: |
+          jf bs
