--- a/.github/workflows/JFrog-CLI-Example.yml
+++ b/.github/workflows/JFrog-CLI-Example.yml
@@ -26,7 +26,7 @@ jobs:
           jf gradle clean build -x test
       - name: Publish artifact
         run: |
-          jf gradle clean artifactoryPublish -b build.gradle
+          jf gradle clean artifactoryPublish -b build.gradle -x test
           # -x test --build-name info.name --build-number info.number
       - name: Publish build info
         run: |
