--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
   id 'com.google.cloud.tools.jib' version '1.8.0'
+    id 'com.bmuschko.docker-java-application' version '7.0.1'
 }
 
 apply plugin: 'java'
